<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">数独游戏</string>
	<string name="edit_sudoku">编辑数独</string>

	<string name="puzzle_folders">OpenSudoku puzzle folders</string>

	<string name="version">版本 %s</string>
	<string name="homepage" translatable="false">http://opensudoku.moire.org</string>
	<string name="email" translatable="false">&lt;opensudoku@moire.org&gt;</string>
	<string name="send_me_bugs">
        If you run into bug which you want to get fixed, don\'t hesitate to contact me by e-mail
		or use issue tracker on project\'s homepage.
	</string>

    <string name="current_developers_label">Current Developer</string>
    <string name="current_developers" translatable="false">Óscar García Amor</string>

    <string name="old_developers_label">Old Developers</string>
    <string name="old_developers" translatable="false">Roman Mašek</string>

    <string name="localization_contributors_label">Localization Contributors</string>
    <string name="localization_contributors" translatable="false">Vit Hnilica\nMartin Sobola\nMartin Helff\nDiego Pierotto\nGokay Can Kayki</string>

	<string name="close">关闭</string>
	<string name="clear">清空</string>
	<string name="save">保存</string>

	<string name="get_more_puzzles_online">Get more puzzles online</string>

	<string name="name">Name:</string>
	<string name="note">Note:</string>

	<string name="select_number">选择数字</string>
	<string name="edit_note">记录笔记</string>

	<string name="add_folder">Add folder</string>
	<string name="import_file">Import</string>
	<string name="import_file_title">Import file %s</string>
	<string name="about">About</string>
	<string name="rename_folder">Rename folder</string>
	<string name="delete_folder">Delete folder</string>
	<string name="rename_folder_title">Rename %s</string>
	<string name="delete_folder_title">Delete %s</string>
	<string name="delete_folder_confirm">Are you sure you want to delete this folder?</string>

	<string name="no_puzzles">没有谜题</string>
	<string name="one_puzzle">1 谜题</string>
	<string name="n_puzzles">%s 谜题</string>
	<string name="all_solved">都已解决</string>
	<string name="n_solved">%s 解决</string>
	<string name="n_unsolved">%s 未解决</string>
	<string name="n_playing">%s 进行中</string>

	<string name="solved">已解决</string>
	<string name="playing">进行中</string>
	<string name="not_started">未开始</string>
	<string name="last_played_at">上次游戏 %s</string>
	<string name="created_at">Created %s</string>
	<string name="at_time">at %s</string>
	<string name="yesterday_at_time">yesterday at %s</string>
	<string name="on_date">on %s</string>
	<string name="add_sudoku">Add sudoku</string>
	<string name="filter">Filter</string>
	<string name="filter_by_gamestate">Filter by game state</string>
	<string name="folders">Folders</string>
	<string name="delete_puzzle_confirm">Are you sure you want to delete selected puzzle?</string>
	<string name="reset_puzzle_confirm">Are you sure you want to reset selected puzzle?</string>
	<string name="play_puzzle">Play this puzzle</string>
	<string name="reset_puzzle">Reset puzzle</string>
	<string name="edit_puzzle">Edit puzzle</string>
	<string name="delete_puzzle">Delete puzzle</string>
	<string name="filter_active">Filtered: %s</string>

	<string name="undo">撤销</string>
	<string name="clear_all_notes">清除游戏记录</string>
	<string name="fill_in_notes">Fill in notes</string>
	<string name="restart">重新开始</string>
	<string name="congrats">恭喜您, 您已经解决了关卡 %s.</string>
	<string name="restart_confirm">您确定要重新开始这个关卡?</string>
	<string name="well_done">干得好!</string>
	<string name="clear_all_notes_confirm">您确定清除之前的游戏记录?</string>
	<string name="settings">设置</string>
	<string name="game_settings">游戏设置</string>

	<string name="game_helpers">游戏帮助</string>
	<string name="highlight_wrong_values">错误的数字高亮提示</string>
	<string name="highlight_wrong_values_summary">不符合数独规则的数字高亮提示.</string>
	<string name="input_methods">输入模式</string>
	<string name="popup">弹出</string>
	<string name="popup_summary">在弹出框内选择数字或编辑文本.</string>
	<string name="single_number">单个</string>
	<string name="single_number_summary">选择数字, 然后点击数字框以填写数字或这只标记.</string>
	<string name="numpad">键盘</string>
	<string name="numpad_summary">显示数字键盘作为标准数字键盘.</string>
	<string name="numpad_move_right">Move right on press</string>
	<string name="numpad_move_right_summary">Moves cell selection by one cell right when number button is pressed.
	</string>

	<string name="numpad_abbr">数字\n键盘</string>
	<string name="popup_abbr">弹出</string>
	<string name="single_number_abbr">单个\n数字</string>
	<string name="welcome">欢迎</string>
	<string name="hint">提示</string>
	<string name="help">帮助</string>
	<string name="that_is_all">这就是所有模式了</string>


	<string name="first_run_hint">这里有一些输入方式可以用来解决谜题. \n\n您可以关闭这个提示在游戏设置中.\n
	</string>
	<string name="im_popup_hint">现在您在弹出模式.
	</string>
	<string name="im_single_number_hint">现在您在单个数字模式.
	</string>
	<string name="im_numpad_hint">现在您在数字键盘模式.
	</string>
	<string name="im_disable_modes_hint">Please remember that you don\'t have to use all input modes. You can disable
		any of them in the game settings.\n\nYou can also use the keyboard and trackball to control the game. If you
		want to enter notes using keyboard, press number with alt or shift.\n
	</string>
	<string name="help_text"><b>Keyboard controls</b>\n\nUse trackball to navigate to the desired cell and then press
		number on keyboard to fill in value. If you want to edit cell\'s note, press number with shift or alt.\n\n<b>
			Input modes</b>\n\nYou can switch between several input modes using button in the lower right corner of the
		screen. You can also disable any input mode in game settings - it will be completely hidden then.\n\n<b>Popup
			input mode</b>\n\nPopup dialog is shown when you tap the cell. You can edit cell\'s content using this
		dialog.\n\n<b>Single Number input mode</b>\n\nFirst select any number button by pressing it. Then just tap on
		cells in which you want to have selected number filled.\n\nUse
		<i>Pencil</i>
		button to toggle between cell\'s value and note editing.\n\n<b>Numpad input mode</b>\n\nButtons act as a
		standard numeric keyboard.\n\nUse
		<i>Pencil</i>
		button to toggle between cell\'s value and note editing.\n
	</string>


	<string name="game">游戏</string>
	<string name="show_hints">第一次载入提示</string>
	<string name="show_hints_summary">显示提示将指导您完成应用程序控制.</string>
	<string name="show_time">显示时间</string>
	<string name="show_time_summary">当游戏进行中显示时间.</string>

	<string name="puzzle_inserted">新谜题已被保存.</string>
	<string name="puzzle_updated">谜题已经更新.</string>

	<string name="puzzles_saved">Puzzles have been saved into \'%s\' folder.</string>
	<string name="no_puzzles_found">No puzzles found.</string>
	<string name="unknown_import_error">Unknown error occurred while importing puzzles, import was canceled.</string>
	<string name="invalid_format">Invalid format, import was canceled.</string>

	<!-- Strings added in 0.7.0 -->
	<string name="loading">载入中...</string>

	<!-- Strings added/changed in 0.7.1 -->
	<string name="more_settings">更多设置</string>
	<string name="screen_border_size">屏幕边界大小</string>
	<string name="screen_border_size_summary">有些显示不应对触摸屏幕上边缘。这可能有助于您解决这一问题.
	</string>
	<string name="highlight_touched_cell">选中的框高亮提示</string>
	<string name="highlight_touched_cell_summary">您选中的框所在的行和列高亮提示.</string>
	<string name="export">Export</string>
	<string name="export_folder">Export folder</string>
	<string name="export_all_folders">Export all folders</string>
	<string name="folders_created">%s folders have been imported.</string>
	<string name="importing">Importing puzzles...</string>
	<string name="exporting">Exporting puzzles...</string>
	<string name="unknown_export_error">Unknown error occurred while exporting puzzles.</string>
	<string name="highlight_completed_values">完成的数字高亮显示</string>
	<string name="highlight_completed_values_summary">已经输入9次的数字的按钮或框高亮显示.
	</string>
	<string name="theme">Theme</string>
	<string name="theme_summary">Select color theme for puzzle board.</string>
	<string name="select_theme">Select theme</string>
	<string name="filename">Filename</string>
	<string name="directory">Directory</string>
	<string name="sdcard_not_found">SD card not found.</string>
	<string name="puzzles_have_been_exported">Puzzles have been exported to %s.</string>
	<string name="file_exists">File already exists, do you want to overwrite it?</string>
	<!-- localization of default folder names -->
	<string name="difficulty_hard">困难</string>
	<string name="difficulty_medium">中等</string>
	<string name="difficulty_easy">容易</string>

	<!-- Strings added/changed in 1.1.0 -->
	<string name="generate_sudoku">Generate new game</string>
	<string name="select_difficulty">Select difficulty</string>
	<string name="generating">Generating puzzle...</string>
	<string name="show_number_totals">显示数字总数</string>
	<string name="show_number_totals_summary">显示每个数字已填写的次数.</string>
	<string name="what_is_new">What\'s new</string>

	<!-- Strings added/changed in 1.1.1 -->
	<string name="fill_in_notes_summary">Enable "Fill in notes" menu item.</string>

	<!-- Strings added/changed in 1.1.2 -->
	<string name="set_checkpoint">Set checkpoint</string>
	<string name="undo_to_checkpoint">Undo to checkpoint</string>
	<string name="undo_to_checkpoint_confirm">Are you sure you want to undo all actions since last checkpoint?</string>
</resources>
